[package]
name = "spanquist"
version = "0.1.1"
authors = ["Francis Lalonde <fralalonde@gmail.com>"]
description = """A macro to randomly schedule self-termination of application."""
documentation = "https://docs.rs/spanquist"
homepage = "https://github.com/fralalonde/spanquist"
repository = "https://github.com/fralalonde/spanquist"
readme = "README.md"
keywords = ["test", "process", "spanish", "inquisition", "random"]
license = "MIT/Apache-2.0"

[dependencies]
rand = "0.3"
